# github-project-digest

./: .dockerignore  .env.example  .gitignore  .mega-linter.yml  .releaserc.json  AGENTS.md  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  megalinter.yml  publish.yml  semver.yml  tests.yml
graphql/: project_items.graphql  project_items_user.graphql  viewer_login.graphql
src/github_project_digest/: __init__.py  cli.py  config.py  digest.py  emailer.py  filtering.py  github.py  github_auth.py  normalize.py  render.py
templates/: digest.html.j2  digest.txt.j2
tests/: conftest.py  test_cli.py  test_config.py  test_digest.py  test_emailer.py  test_filtering.py  test_github.py  test_normalize.py  test_render.py
